# light-monitoring-tool

./: .gitignore  .gitmodules  README.md  prepare-build.bat
src/: CMakeLists.txt  CPUMonitor.cpp  CPUMonitor.h  HttpServer.cpp  HttpServer.h  PeriodicTicker.cpp  PeriodicTicker.h  cpu-stats.cpp  cpu-stats.h  main.cpp  monitoring-service.cpp  monitoring-service.h
src/html-files/: generate-cpp.bat  index.html  test.html  to-cpp.bat
src/html-files/css/: style.css
tools/bin2c/: build-win32-msvc.bat
tools/windows/: conanfile.txt  get-boost.bat  run-cmake.bat
tools/windows/Conan-0.14.1/conan/: _ctypes.pyd  _hashlib.pyd  _multiprocessing.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  bz2.pyd  conan.exe.manifest  conan_server.exe.manifest  conanpath.bat  pyexpat.pyd  select.pyd  unicodedata.pyd
tools/windows/Conan-0.14.1/docs/: README.TXT
